add template product detail

--- a/.env.example
+++ b/.env.example
@@ -60,3 +60,5 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 PHONE="+84 395 341 998"
 EMAIL="noisyboyy98@gmail.com"
+LOCATION="203 Fake St. Mountain View, San Francisco, California, VietNam"
+INFO_DOMAIN="info@yourdomain.com"
